src/test/ui/compile-fail-migration/export-import.stderr
error[E0603]: function `unexported` is private
  --> $DIR/export-import.rs:11:5
   |
LL | use m::unexported;
   |     ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
